# cudaqx

.claude/skills/cuda-qx-qec/: REFERENCE.md  SKILL.md
.claude/skills/cuda-qx-solvers/: SKILL.md
.github/workflows/: all_libs_release.yaml
docs/sphinx/api/qec/: tensor_network_decoder_api.rst
docs/sphinx/components/qec/: introduction.rst
docs/sphinx/examples/qec/python/: noise_learning.py  tn_noise_learning.py
docs/sphinx/examples_rst/qec/: decoders.rst
libs/qec/lib/realtime/: CMakeLists.txt  realtime_decoding.cpp
libs/qec/lib/realtime/decoding-server-cqr/: CMakeLists.txt  decoding_server_cqr.cpp  qec_device_call_service.cpp
libs/qec/lib/realtime/device_call/: device_call_kernels.cpp  device_call_kernels_host.cpp  qec_device_call_service.cpp
libs/qec/lib/realtime/simulation/: CMakeLists.txt
libs/qec/lib/realtime/simulation-cqr/: simulation_cqr_device.cpp  simulation_cqr_host.cpp
libs/qec/python/cudaq_qec/plugins/decoders/: tensor_network_decoder.py
libs/qec/python/cudaq_qec/plugins/decoders/tensor_network_utils/: contractors.py  nm_optimizer.py  noise_models.py
libs/qec/python/tests/: test_nm_optimizer.py  test_tensor_network_decoder.py  test_tn_noise_models.py
libs/qec/unittests/decoders/pymatching/: CMakeLists.txt  test_pymatching_device_call_realtime.cpp
scripts/ci/: test_wheels.sh
scripts/validation/container/: validate_container.sh
