# ============================================================================ #
# Copyright (c) 2024 - 2026 NVIDIA Corporation & Affiliates.                   #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

find_package(LLVM 22.1.4 EXACT REQUIRED CONFIG)

# Enable CUDA for device code
if(CMAKE_CUDA_COMPILER)
  enable_language(CUDA)
  
  # Find cuda-quantum realtime headers for device library
  set(CUDAQ_REALTIME_ROOT "" CACHE PATH "Prefix to cuda-quantum install")
  set(_cudaq_realtime_prefixes "")
  if(CUDAQ_REALTIME_ROOT)
    list(APPEND _cudaq_realtime_prefixes "${CUDAQ_REALTIME_ROOT}")
    list(APPEND _cudaq_realtime_prefixes "${CUDAQ_REALTIME_ROOT}/build")
  endif()
  if(CUDAQ_INSTALL_DIR)
    list(APPEND _cudaq_realtime_prefixes "${CUDAQ_INSTALL_DIR}")
  endif()
  if(CUDAQ_INSTALL_PREFIX)
    list(APPEND _cudaq_realtime_prefixes "${CUDAQ_INSTALL_PREFIX}")
  endif()
  
  macro(cudaq_qec_find_realtime_path output_var)
    cmake_parse_arguments(ARG "" "" "NAMES;PATH_SUFFIXES" ${ARGN})
    find_path(${output_var}
      NAMES ${ARG_NAMES}
      HINTS ${_cudaq_realtime_prefixes}
      PATH_SUFFIXES ${ARG_PATH_SUFFIXES}
      NO_DEFAULT_PATH
    )
    if(NOT DEFINED ${output_var} OR NOT "${${output_var}}")
      find_path(${output_var}
        NAMES ${ARG_NAMES}
        PATHS ${_cudaq_realtime_prefixes}
        PATH_SUFFIXES ${ARG_PATH_SUFFIXES}
      )
    endif()
  endmacro()

  macro(cudaq_qec_find_realtime_library output_var)
    cmake_parse_arguments(ARG "" "" "NAMES;PATH_SUFFIXES" ${ARGN})
    find_library(${output_var}
      NAMES ${ARG_NAMES}
      HINTS ${_cudaq_realtime_prefixes}
      PATH_SUFFIXES ${ARG_PATH_SUFFIXES}
      NO_DEFAULT_PATH
    )
    if(NOT DEFINED ${output_var} OR NOT "${${output_var}}")
      find_library(${output_var}
        NAMES ${ARG_NAMES}
        PATHS ${_cudaq_realtime_prefixes}
        PATH_SUFFIXES ${ARG_PATH_SUFFIXES}
      )
    endif()
  endmacro()

  cudaq_qec_find_realtime_path(CUDAQ_REALTIME_INCLUDE_DIR
    NAMES cudaq/realtime/daemon/dispatcher/cudaq_realtime.h
    PATH_SUFFIXES include
  )
  if(NOT CUDAQ_REALTIME_INCLUDE_DIR)
    cudaq_qec_find_realtime_path(CUDAQ_REALTIME_INCLUDE_DIR
      NAMES cudaq/nvqlink/daemon/dispatcher/cudaq_realtime.h
      PATH_SUFFIXES include ../include
    )
  endif()
  
  if(CUDAQ_REALTIME_INCLUDE_DIR)
    message(STATUS "Found cuda-quantum realtime headers at ${CUDAQ_REALTIME_INCLUDE_DIR}")
    cudaq_qec_find_realtime_library(CUDAQ_REALTIME_LIBRARY
      NAMES cudaq-realtime
      PATH_SUFFIXES lib
    )
    if(CUDAQ_REALTIME_LIBRARY)
      message(STATUS "Found cuda-quantum realtime library at ${CUDAQ_REALTIME_LIBRARY}")
      get_filename_component(_CUDAQ_REALTIME_LIB_DIR "${CUDAQ_REALTIME_LIBRARY}" DIRECTORY)
    endif()

    # The host-side dispatch loop (cudaq_host_dispatcher_loop), used by
    # qec_realtime_session, lives in libcudaq-realtime-host-dispatch -- separate
    # from libcudaq-realtime.  Locate it so cudaq-qec-realtime-decoding can link
    # it (mirrors the cudaq-realtime-pipeline target below).
    cudaq_qec_find_realtime_library(CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY
      NAMES cudaq-realtime-host-dispatch
      PATH_SUFFIXES lib
    )
    if(CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY)
      message(STATUS "Found cuda-quantum realtime host dispatch library at ${CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY}")
    endif()

    # CUDA-Q lowered `cudaq::device_call` host-dispatch integration needs the
    # DeviceCallService provider API from a realtime/device-call-enabled CUDA-Q
    # build.
    cudaq_qec_find_realtime_path(CUDAQ_DEVICE_CALL_INCLUDE_DIR
      NAMES cudaq_internal/device_call/DeviceCallService.h
      PATH_SUFFIXES include
    )
    if(CUDAQ_DEVICE_CALL_INCLUDE_DIR)
      message(STATUS "Found cuda-quantum device_call headers at ${CUDAQ_DEVICE_CALL_INCLUDE_DIR}")
    else()
      message(STATUS "cuda-quantum device_call headers not found. "
                     "QEC lowered device_call host-dispatch service will not be built.")
    endif()

    cudaq_qec_find_realtime_library(CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY
      NAMES cudaq-device-call-runtime
      PATH_SUFFIXES lib
    )
    if(CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY)
      message(STATUS "Found cuda-quantum device_call runtime library at ${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}")
      get_filename_component(_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR
        "${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}" DIRECTORY)
    else()
      message(STATUS "cuda-quantum device_call runtime library not found. "
                     "QEC lowered device_call host-dispatch service will not be built.")
    endif()

    set(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE FALSE)
    if(CUDAQ_DEVICE_CALL_INCLUDE_DIR AND CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY)
      set(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE TRUE)
    endif()

    
    # Create static device library for device code
    add_library(cudaq-qec-realtime-cudevice STATIC
      gpu_kernels.cu
    )
    
    set_target_properties(cudaq-qec-realtime-cudevice PROPERTIES
      CUDA_SEPARABLE_COMPILATION ON
      CUDA_STANDARD 17
      POSITION_INDEPENDENT_CODE ON
    )
    
    # Handle both standalone (libs/qec) and full repo builds
    if(CUDAQX_QEC_STANDALONE_BUILD)
      set(_core_include_dir "${CMAKE_SOURCE_DIR}/../core/include")
    else()
      set(_core_include_dir "${CMAKE_SOURCE_DIR}/libs/core/include")
    endif()
    
    target_include_directories(cudaq-qec-realtime-cudevice PUBLIC
      $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
      $<BUILD_INTERFACE:${_core_include_dir}>
      $<BUILD_INTERFACE:${CUDAQ_REALTIME_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:include>
    )
    
    target_link_libraries(cudaq-qec-realtime-cudevice PUBLIC CUDA::cudart)
    
    set_target_properties(cudaq-qec-realtime-cudevice PROPERTIES
      ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    )
    
    install(TARGETS cudaq-qec-realtime-cudevice
      COMPONENT qec-lib
      ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
  else()
    message(WARNING "cuda-quantum realtime headers not found. "
                    "Device library cudaq-qec-realtime-device will not be built. "
                    "Set CUDAQ_REALTIME_ROOT to enable it.")
  endif()
endif()

set(CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE "" CACHE FILEPATH
    "Path to prebuilt proprietary realtime cudevice archive")
if(CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE)
  if(NOT EXISTS "${CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE}")
    message(FATAL_ERROR
      "CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE does not exist: "
      "${CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE}")
  endif()
  add_library(cudaq-qec-realtime-cudevice-proprietary STATIC IMPORTED GLOBAL)
  set_target_properties(cudaq-qec-realtime-cudevice-proprietary PROPERTIES
    IMPORTED_LOCATION "${CUDAQ_QEC_REALTIME_CUDEVICE_PROPRIETARY_ARCHIVE}")
endif()

# Shared library for host-side API
set(_qec_realtime_decoding_sources
  realtime_decoding.cpp
  config.cpp
  qec_realtime_session.cpp
  rpc_producer.cpp
)
if(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE)
  list(APPEND _qec_realtime_decoding_sources
    device_call/qec_device_call_service.cpp)
endif()

add_library(cudaq-qec-realtime-decoding SHARED
  ${_qec_realtime_decoding_sources}
)
if(CUDAQ_QEC_DEVICE_CALL_SERVICE_AVAILABLE)
  add_library(cudaq-qec-realtime-device-call INTERFACE)
  target_link_libraries(cudaq-qec-realtime-device-call INTERFACE
    cudaq-qec-realtime-decoding)

  # Backend-neutral device-side wrappers compiled with -frealtime-lowering, so
  # each cudaq::device_call is rewritten to the realtime frame ABI and
  # dispatched (by fnv1a(function_id)) through the host-dispatch channel to the
  # cudaq-qec-realtime-device-call service. The callees use the generic spec
  # names (enqueue_syndromes / get_corrections / reset_decoder), which is what
  # the service registers -- no simulation_*/C++-mangled symbols.
  #
  # device_call_kernels_host.cpp defines the generic callee symbols (hidden, to
  # satisfy the link without exporting the very generic names);
  # device_call_kernels.cpp holds the -frealtime-lowering'd __qpu__ wrappers.
  add_library(cudaq-qec-realtime-decoding-cqr SHARED
    device_call/device_call_kernels_host.cpp
  )
  set_target_properties(cudaq-qec-realtime-decoding-cqr PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

  target_compile_options(cudaq-qec-realtime-decoding-cqr
    PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)

  target_include_directories(cudaq-qec-realtime-decoding-cqr
    PUBLIC
      $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:${CUDAQ_INCLUDE_DIR}>
      $<INSTALL_INTERFACE:include>
  )

  cudaqx_add_device_code(cudaq-qec-realtime-decoding-cqr
    SOURCES
      device_call/device_call_kernels.cpp
    COMPILER_FLAGS
      -frealtime-lowering
  )

  target_link_libraries(cudaq-qec-realtime-decoding-cqr
    PUBLIC
      cudaqx-core
      cudaq-qec
      cudaq-qec-realtime-decoding
    PRIVATE
      cudaq::cudaq-common
  )

  install(TARGETS cudaq-qec-realtime-decoding-cqr
    COMPONENT qec-lib
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  )
endif()

target_compile_options(cudaq-qec-realtime-decoding 
  PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)

target_include_directories(cudaq-qec-realtime-decoding
  PUBLIC 
    $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
    $<BUILD_INTERFACE:${LLVM_INCLUDE_DIRS}>
    $<INSTALL_INTERFACE:${CUDAQ_INCLUDE_DIR}>
    $<INSTALL_INTERFACE:include>
  PRIVATE
    $<$<BOOL:${CUDAQ_REALTIME_INCLUDE_DIR}>:${CUDAQ_REALTIME_INCLUDE_DIR}>
    $<$<BOOL:${CUDAQ_DEVICE_CALL_INCLUDE_DIR}>:${CUDAQ_DEVICE_CALL_INCLUDE_DIR}>
    ${CUDAToolkit_INCLUDE_DIRS}
)

if(CUDAQ_REALTIME_INCLUDE_DIR)
  target_compile_definitions(cudaq-qec-realtime-decoding PRIVATE
    CUDAQ_REALTIME_ROOT)
endif()

target_link_options(cudaq-qec-realtime-decoding PRIVATE
  $<$<CXX_COMPILER_ID:GNU>:-Wl,--exclude-libs,ALL>
)

target_link_libraries(cudaq-qec-realtime-decoding
  PUBLIC 
    cudaqx-core
    cudaq-qec
  PRIVATE
    cudaq::cudaq-common
    LLVMSupport
    $<$<BOOL:${CUDAQ_REALTIME_LIBRARY}>:${CUDAQ_REALTIME_LIBRARY}>
    $<$<BOOL:${CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY}>:${CUDAQ_REALTIME_HOST_DISPATCH_LIBRARY}>
    $<$<BOOL:${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}>:${CUDAQ_DEVICE_CALL_RUNTIME_LIBRARY}>
)

set(_qec_realtime_decoding_build_rpath "${CMAKE_BINARY_DIR}/lib")
set(_qec_realtime_decoding_install_rpath
  "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
if(_CUDAQ_REALTIME_LIB_DIR)
  list(APPEND _qec_realtime_decoding_build_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
  list(APPEND _qec_realtime_decoding_install_rpath "${_CUDAQ_REALTIME_LIB_DIR}")
endif()
if(_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR)
  list(APPEND _qec_realtime_decoding_build_rpath
    "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
  list(APPEND _qec_realtime_decoding_install_rpath
    "${_CUDAQ_DEVICE_CALL_RUNTIME_LIB_DIR}")
endif()
set_target_properties(cudaq-qec-realtime-decoding PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  BUILD_RPATH "${_qec_realtime_decoding_build_rpath}"
  INSTALL_RPATH "${_qec_realtime_decoding_install_rpath}"
)


install(TARGETS cudaq-qec-realtime-decoding
  COMPONENT qec-lib
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

# ---------------------------------------------------------------------------
# RealtimePipeline shared library
# Requires pre-installed cudaq-realtime (set CUDAQ_REALTIME_ROOT)
# ---------------------------------------------------------------------------
if(CMAKE_CUDA_COMPILER AND CUDAQ_REALTIME_INCLUDE_DIR)
    cudaq_qec_find_realtime_library(_CUDAQ_RT_LIB
      NAMES cudaq-realtime
      PATH_SUFFIXES lib
    )
    cudaq_qec_find_realtime_library(_CUDAQ_RT_HD_LIB
      NAMES cudaq-realtime-host-dispatch
      PATH_SUFFIXES lib
    )

    if(_CUDAQ_RT_LIB AND _CUDAQ_RT_HD_LIB)
      message(STATUS "RealtimePipeline: building with CUDAQ_REALTIME_INCLUDE_DIR=${CUDAQ_REALTIME_INCLUDE_DIR}")

      add_library(cudaq-realtime-pipeline SHARED
        realtime_pipeline.cu
      )

      get_filename_component(_cuda_bin_pl "${CMAKE_CUDA_COMPILER}" DIRECTORY)
      get_filename_component(_cuda_root_pl "${_cuda_bin_pl}" DIRECTORY)
      set(_cuda_cccl_include_pl "${_cuda_root_pl}/include/cccl")

      target_include_directories(cudaq-realtime-pipeline
        PUBLIC
          $<BUILD_INTERFACE:${CUDAQX_QEC_INCLUDE_DIR}>
          $<BUILD_INTERFACE:${CUDAQ_REALTIME_INCLUDE_DIR}>
          $<BUILD_INTERFACE:${_cuda_cccl_include_pl}>
          $<INSTALL_INTERFACE:include>
      )

      target_link_libraries(cudaq-realtime-pipeline
        PUBLIC CUDA::cudart_static
        PRIVATE ${_CUDAQ_RT_LIB} ${_CUDAQ_RT_HD_LIB}
      )

      option(ENABLE_NVTX "Enable NVTX profiling ranges" OFF)
      if(ENABLE_NVTX)
        target_compile_definitions(cudaq-realtime-pipeline PRIVATE ENABLE_NVTX)
        message(STATUS "NVTX profiling enabled for cudaq-realtime-pipeline")
      endif()


      get_filename_component(_CUDAQ_RT_LIB_DIR "${_CUDAQ_RT_LIB}" DIRECTORY)
      set_target_properties(cudaq-realtime-pipeline PROPERTIES
        CUDA_SEPARABLE_COMPILATION ON
        POSITION_INDEPENDENT_CODE ON
        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
        BUILD_RPATH "${_CUDAQ_RT_LIB_DIR};${CMAKE_BINARY_DIR}/lib"
      )

      install(TARGETS cudaq-realtime-pipeline
        COMPONENT qec-lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
      )
    else()
      message(STATUS "RealtimePipeline: skipping (cudaq-realtime or cudaq-realtime-host-dispatch not found)")
    endif()
else()
  if(CMAKE_CUDA_COMPILER)
    message(STATUS "RealtimePipeline: skipping (CUDAQ_REALTIME_INCLUDE_DIR not set)")
  endif()
endif()

add_subdirectory(quantinuum)
add_subdirectory(simulation)
